# cl-agent

./: .gitignore  README.md
adapters/aider/: README.md  __init__.py  context_builder.py  item_mapper.py  log_loader.py  runner.py
benchmarks/: example_suite.json
cl-layer/: .gitignore  README.md  pyproject.toml
cl-layer/cl_layer/dataset/: __init__.py  builder.py  dedup.py  example_schema.py  filters.py  from_episode.py  hindsight.py  render_chat.py  splits.py
cl-layer/cl_layer/distill/: dreams.py  program.py  skills.py
cl-layer/cl_layer/episode/: recorder.py  schema.py
cl-layer/cl_layer/eval/: __init__.py  benchmark.py  modes.py  runner.py
cl-layer/cl_layer/replay/: buffer.py
cl-layer/cl_layer/search/: __init__.py  archive.py  base.py  controller.py  crossover.py  mutation.py  repair.py  sampler.py  sandbox.py  selection.py  treequest_backend.py
cl-layer/cl_layer/serve/: modelfile.py  ollama_create.py  ollama_smoke.py
cl-layer/cl_layer/train/: base.py  export.py  mlx_backend.py  promotion.py  registry.py  unsloth_backend.py
cl-layer/cl_layer/verify/: __init__.py  base.py  lint_runner.py  pytest_runner.py  python_repo.py  score.py  typecheck_runner.py
cl-layer/tests/: test_aider_adapter.py  test_dataset_builder.py  test_episode.py  test_eval.py  test_hermes_agent_adapter.py  test_integration_learning_path.py  test_ollama.py  test_openhands_adapter.py  test_pi_mono_adapter.py  test_promotion.py  test_replay.py  test_search.py  test_swe_agent_adapter.py  test_train.py  test_verifier.py
cl-layer/tests/fixtures/swe_agent/: full_swe_agent_shape.traj
(+29 files in other folders)
