[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cl-layer"
version = "0.1.0"
description = "Continual-learning substrate for coding agents"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["."]
include = ["cl_layer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
